--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
     android:layout_width="match_parent"
     android:layout_height="1dp"
     android:background="@android:color/darker_gray"
-    android:layout_below="@+id/textView"
+    android:layout_below="@+id/robotNum"
     android:layout_alignParentLeft="true"
     android:layout_alignParentStart="true"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -28,14 +28,14 @@
     android:textStyle="bold"
     android:layout_alignParentTop="true"
     android:layout_centerHorizontal="true"
-    android:id="@+id/textView2" />
+    android:id="@+id/timer" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Round: XX  Robot: XXXX"
-        android:id="@+id/textView"
-        android:layout_below="@+id/textView2"
+        android:id="@+id/robotNum"
+        android:layout_below="@+id/timer"
         android:layout_centerHorizontal="true"
         android:textSize="25dp"
         android:textColor="@color/secondary_text_default_material_dark" />
@@ -55,9 +55,9 @@
         android:id="@+id/goalsCounter"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_toStartOf="@+id/textView"
+        android:layout_toStartOf="@+id/robotNum"
         android:layout_alignTop="@+id/view"
-        android:layout_toLeftOf="@+id/textView" />
+        android:layout_toLeftOf="@+id/robotNum" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -91,13 +91,14 @@
             android:layout_height="wrap_content"
             android:text="New RadioButton"
             android:id="@+id/radioButton"
-            android:layout_gravity="center_horizontal" />
+            />
 
         <RadioButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="New RadioButton"
-            android:id="@+id/radioButton2" />
+            android:id="@+id/radioButton2"
+            />
     </RadioGroup>
 
 </RelativeLayout>
