--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -84,7 +84,8 @@
         android:layout_height="match_parent"
         android:layout_alignLeft="@+id/scaleCheckBox"
         android:layout_alignStart="@+id/scaleCheckBox"
-        android:layout_below="@+id/goalsCounter">
+        android:layout_below="@+id/goalsCounter"
+        android:id="@+id/radioGroup">
 
         <RadioButton
             android:layout_width="wrap_content"
@@ -100,5 +101,6 @@
             android:id="@+id/radioButton2"
             />
     </RadioGroup>
+
 
 </RelativeLayout>
