--- a/app/src/main/res/layout/counter.xml
+++ b/app/src/main/res/layout/counter.xml
@@ -4,8 +4,8 @@
     android:layout_height="match_parent">
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="34dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:text="+1"
         android:id="@+id/plusOneButton"
         android:layout_gravity="center_horizontal" />
@@ -18,11 +18,11 @@
         android:id="@+id/counterText"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="-7dp"
-        android:layout_marginBottom="-7dp"/>
+        android:layout_marginBottom="-5dp"/>
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="34dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:text="-1"
         android:id="@+id/minusOneButton"
         android:layout_gravity="center_horizontal" />
